--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -4,3 +4,6 @@ $background-color:black;
 $btn-bgcolor:#1D809F;
 $btn-color:white;
 $btn-bgColorOffer:black;
+$section-title:#ecb807;
+$section-bgcolor:#1d809f;
+$btn-bgColorClick: #f8f9fa;
