--- a/assets/scss/scss-utils/_media-query.scss
+++ b/assets/scss/scss-utils/_media-query.scss
@@ -33,5 +33,15 @@
     #second-section p{
         text-align: center;
     }
+    .fifth-section_title{
+        text-align: center;
+    }
+    .sixth-section {
+     display: flex;
+     justify-content:center;
+     text-align: center;
+    
+    }
+    
 }
 
