--- a/assets/scss/layouts/_section.scss
+++ b/assets/scss/layouts/_section.scss
@@ -6,6 +6,7 @@
     width: 100vw;
     display: flex;
     justify-content: center;
+
     .hero-section_title {
         // height: 100vh;
         display: flex;
@@ -18,6 +19,7 @@
         font-size: 80px;
         font-weight: 50px;
     }
+
     h3 {
         font-size: 30px;
         font-style: italic;
@@ -33,6 +35,7 @@
     width: 200px;
     font-size: 20px;
 }
+
 #second-section {
     height: 50vh;
     width: 100%;
@@ -40,11 +43,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
     h1 {
         // font-family: 'Source Sans Pro', sans-serif;
         font-weight: 200px;
         margin-bottom: 10px;
     }
+
     .btn-offer {
         color: $btn-color;
         background-color: $btn-bgColorOffer;
@@ -53,6 +58,7 @@
         width: 200px;
         font-size: 20px;
     }
+
     //    @media (min-width: 576px){
     //        width: 25%;
     //    }
@@ -61,15 +67,23 @@
 #third-section {
     // height:50vh;
     background-color: #1d809f;
+
     .container {
         background-color: #1d809f;
+
+        .row {
+            padding-bottom: 60px;
+        }
+
         h1 {
             color: $btn-color;
         }
+
         p {
             color: #ffffffb3;
         }
     }
+
     .third-section_title {
         display: flex;
         justify-content: center;
@@ -77,13 +91,16 @@
         flex-direction: column;
         padding-top: 100px;
         margin-bottom: 50px;
+
         h2 {
-            color: #ecb807;
+            color: $section-title;
         }
+
         h1 {
             color: white;
         }
     }
+
     .mobile-icon {
         background-color: #fff;
         // color: #1D809F;
@@ -93,10 +110,11 @@
         line-height: 7.5rem;
         font-size: 2.25rem;
         box-shadow: white;
-        color: #1d809f;
-        border: 1px solid #1d809f;
+        color: $section-bgcolor;
+        border: 1px solid $section-bgcolor;
         background-color: white;
         border-radius: 50%;
+
         .fa-solid fa-mobile-screen {
             display: flex;
             justify-content: center;
@@ -104,9 +122,11 @@
         }
     }
 }
+
 #fourth-section {
     background-image: url(https://startbootstrap.github.io/startbootstrap-stylish-portfolio/assets/img/bg-callout.jpg);
     height: 70vh;
+
     .fourth-section_title {
         display: flex;
         justify-content: center;
@@ -115,6 +135,7 @@
         width: 100%;
         height: 100%;
     }
+
     .btn-download {
         background-color: $btn-bgcolor;
         border-color: $btn-bgcolor;
@@ -125,6 +146,94 @@
         font-size: 20px;
     }
 }
+
 .row i {
     margin: 0 auto;
+}
+
+#fifth-section {
+    // height: 100vh;
+    display: flex;
+
+    // flex-wrap: wrap;
+    h3 {
+        color: $section-title;
+    }
+
+    h2 {
+        font-size: 48px;
+    }
+
+    .fifth-section_title {
+        margin-top: 100px;
+        margin-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    img:hover {
+        width: 500px;
+        height: 350px;
+        padding: 10px 10px;
+        opacity: 0.5;
+    }
+
+    .col-6 {
+        position: relative;
+    }
+
+    .img-desc {
+        // width: 90%;
+        position: absolute;
+        bottom: 100px;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        left: 50px;
+        color: $btn-color;
+    }
+}
+
+#sixth-section {
+    margin-top: 100px;
+    height: 50vh;
+    background-color: $section-bgcolor;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h1 {
+        color: $btn-color;
+    }
+
+    .btns {
+        color: $btn-color;
+        background-color: $btn-bgColorOffer;
+        height: 70px;
+        margin-top: 30px;
+        width: 200px;
+        font-size: 20px;
+        border-radius: 10px;
+    }
+
+    .click-btn {
+        background-color: $btn-bgColorClick;
+        color: $btn-bgColorOffer;
+        margin-right: 10px;
+    }
+}
+
+iframe {
+    width: 100%;
+}
+
+#sixth {
+    height: 50vh;
+
 }
